--- a/android-build.gradle
+++ b/android-build.gradle
@@ -1,5 +1,7 @@
 dependencies {
 	api 'com.tencent.imsdk:imsdk:+'
+	implementation 'com.android.support:support-annotations:20.0.0'
+	implementation 'com.android.support:support-v4:24.1.1'
 }
 android {
     defaultConfig {
