--- a/plugin.xml
+++ b/plugin.xml
@@ -41,5 +41,6 @@
         </config-file>
         <header-file src="src/ios/Tim.h" />
         <source-file src="src/ios/Tim.m" />
+        <framework src="src/ios/libs/ImSDK.framework" />
     </platform>
 </plugin>
